--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,8 @@
   "content_scripts": [
     {
       "matches": ["*://*.linkedin.com/jobs/*"],
-      "js": ["content.js"]
+      "js": ["content.js"],
+      "css": ["style.css"]
     }
   ]
 }
